--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,17 @@
     
     --radius: 0.5rem;
 }
-
+.back-inv{
+    text-decoration: none;
+    color: white;
+    background-color:  hsl(27, 100%, 56%);
+    margin: 12px;
+    padding: 5px;
+    outline: 2px solid wheat;
+    border-radius: 5px;
+    text-align: center;
+    font-weight: bold;
+}
 /* Reset and Base Styles */
 * {
     margin: 0;
@@ -114,6 +124,7 @@ body {
     color: var(--primary);
     border-bottom-color: var(--primary);
     background: var(--card);
+    background: hsl(27, 78%, 74%);
 }
 
 .tab-button i {
@@ -257,7 +268,23 @@ body {
     padding: 1.5rem;
     min-height: 350px;
     position: relative;
+     grid-template-columns: 1fr 1fr 1fr;
 }
+.container1{
+    display: flex;
+    width: 100%;
+    height: 400px;
+    gap:15px;
+    /* position: relative; */
+    
+}
+.col-2{
+    overflow-y: scroll;
+    border: 2px solid gray;
+    
+}
+
+
 
 .chart-item h3 {
     font-size: 1.1rem;
